# comunity-Agent-town

./: .env.example  .gitignore  Generative_Agents_Project_Documentation_v2.docx  README.md  generate_docs.py  pyproject.toml
agents/emma/: KNOWLEDGE.md  SOUL.md  TODAY.md
agents/john/: KNOWLEDGE.md  SOUL.md  TODAY.md
agents/maria/: KNOWLEDGE.md  SOUL.md  TODAY.md
config/: agents.yaml  simulation.yaml  world.yaml
src/: __init__.py  main.py
src/agents/: __init__.py  agent.py  files.py  personality.py  proposals.py  soul.py
src/cognition/: __init__.py  embeddings.py  memory.py  needs.py  planner.py  reflection.py
src/engine/: clock.py  replay.py  simulation.py
src/harness/: __init__.py  agent_harness.py
src/llm/: benchmark.py  client.py  gateway.py  parsing.py
src/observability/: event_log.py  transcript.py
src/prompts/: __init__.py  act.py  dialogue.py  perceive.py  plan.py  reflect.py  score_importance.py
src/storage/: db.py  postgres_schema.sql  repositories.py  schema.sql
src/world/: __init__.py  context.py  events.py  resolver.py  state.py
tests/: test_agent_files.py  test_agent_harness.py  test_agent_tick.py  test_llm_benchmark.py  test_llm_gateway.py  test_memory.py  test_needs.py  test_personality.py  test_repositories.py  test_resolver.py  test_simulation_clock.py  test_soul.py  test_world_context.py
